Добавлены комментарии к методам класса ReportManager. Обработано исключение IOException, которое выбрасывает метод uploadPhotoToReport класса ReportManager в методе класса ReportHandler answer.